# dhcpd-configurator

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
dhcpd_configurator/: __init__.py  device.py  utils.py  writers.py
dhcpd_configurator/templates/: __init__.py  dhcpd.conf.template  hosts.template
tests/: conftest.py  test_mac_vendors.py  test_operation.py  test_utils.py
tests/test_mac_vendors_/: test_mac_vendors.yml
tests/test_operation_/: test_dhcpd_conf.conf  test_dhcpd_conf_True_.conf  test_hosts_file.txt
